# entity-manager

./: .env.example  README.md  pyproject.toml
entity_manager/: __init__.py  backend.py  cli.py  config.py  link_commands.py  models.py
entity_manager/backends/: __init__.py  beads.py  github.py  notion.py
src/entity_manager/: backend.py  config_commands.py
src/entity_manager/backends/: beads.py
tests/: __init__.py  test_backend.py  test_models.py
tests/backends/: test_beads.py  test_github.py  test_notion.py
