[project]
name = "entity-manager"
version = "0.1.0"
description = "An entity manager for LLMs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.3.0",
    "PyGithub>=2.4.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[project.scripts]
entity-manager = "entity_manager.cli:app.meta"
em = "entity_manager.cli:app.meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
