[project]
name = "entity-manager"
version = "0.1.0"
description = "An entity manager for LLMs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.3.0,<5",
    "PyGithub>=2.8.1,<3",
    "structlog>=25.5.0,<26",
    "pyyaml>=6.0.3,<7",
    "notion-client>=2.7.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-xdist>=3.8.0,<4",
    "ruff>=0.14.8,<0.15",
]

[project.scripts]
entity-manager = "entity_manager.cli:app.meta"
em = "entity_manager.cli:app.meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/entity_manager",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]
